Stretch body to 100% height. Looks like a bug in Foundation...

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -28,3 +28,11 @@ ul.square {
 body.noscroll {
   overflow: hidden;
 }
+
+html {
+  height: 100%;
+}
+
+body {
+  min-height: 100%;
+}
